# cli-progress

./: Cargo.toml  README.md
src/: coloured.rs  lib.rs  progress.rs  spinner.rs
