[package]
name = "cli-progress"
version = "0.1.0"
authors = ["y1j2x34 <y1j2x34@qq.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/y1j2x34/cli-progress"
keywords = ["cli", "terminal", "progress", "progressbar", "multibar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"
